EXTRA_DIST = discimagehelper.hh dvdvideo.hh fileset.hh iforeader.hh \
			 iso9660reader.hh joliet.hh sectorstream.hh udf.hh \
			 discimagewriter.hh eltorito.hh filetree.hh iso9660.hh \
			 iso9660writer.hh sectormanager.hh stringtable.hh udfwriter.hh 

lib_LTLIBRARIES = libckfilesystem.la

libckfilesystem_la_SOURCES = discimagehelper.cc dvdvideo.cc filetree.cc \
							 iso9660.cc iso9660writer.cc sectormanager.cc \
							 stringtable.cc udfwriter.cc discimagewriter.cc \
							 eltorito.cc iforeader.cc iso9660reader.cc \
							 joliet.cc sectorstream.cc udf.cc

library_includedir = $(includedir)/ckfilesystem
library_include_HEADERS = discimagehelper.hh dvdvideo.hh fileset.hh \
						  iforeader.hh iso9660reader.hh joliet.hh \
						  sectorstream.hh udf.hh discimagewriter.hh \
						  eltorito.hh filetree.hh iso9660.hh iso9660writer.hh \
						  sectormanager.hh stringtable.hh udfwriter.hh

