EXTRA_DIST = ../include/ckfilesystem/const.hh \
			 ../include/ckfilesystem/discimagehelper.hh \
			 ../include/ckfilesystem/discimagewriter.hh \
			 ../include/ckfilesystem/dvdvideo.hh \
			 ../include/ckfilesystem/eltorito.hh \
			 ../include/ckfilesystem/fileset.hh \
			 ../include/ckfilesystem/filetree.hh \
			 ../include/ckfilesystem/iforeader.hh \
			 ../include/ckfilesystem/iso9660.hh \
			 ../include/ckfilesystem/iso9660reader.hh \
			 ../include/ckfilesystem/iso9660writer.hh \
			 ../include/ckfilesystem/joliet.hh \
			 ../include/ckfilesystem/sectormanager.hh \
			 ../include/ckfilesystem/sectorstream.hh \
			 ../include/ckfilesystem/stringtable.hh \
			 ../include/ckfilesystem/udf.hh \
			 ../include/ckfilesystem/udfwriter.hh 
INCLUDES = -I../include
lib_LTLIBRARIES = libckfilesystem.la

libckfilesystem_la_SOURCES = discimagehelper.cc dvdvideo.cc filetree.cc \
							 iso9660.cc iso9660writer.cc sectormanager.cc \
							 stringtable.cc udfwriter.cc discimagewriter.cc \
							 eltorito.cc iforeader.cc iso9660reader.cc \
							 joliet.cc sectorstream.cc udf.cc

library_includedir = $(includedir)/ckfilesystem
library_include_HEADERS = ../include/ckfilesystem/const.hh \
						  ../include/ckfilesystem/discimagehelper.hh \
						  ../include/ckfilesystem/discimagewriter.hh \
						  ../include/ckfilesystem/dvdvideo.hh \
						  ../include/ckfilesystem/eltorito.hh \
						  ../include/ckfilesystem/fileset.hh \
						  ../include/ckfilesystem/filetree.hh \
						  ../include/ckfilesystem/iforeader.hh \
						  ../include/ckfilesystem/iso9660.hh \
						  ../include/ckfilesystem/iso9660reader.hh \
						  ../include/ckfilesystem/iso9660writer.hh \
						  ../include/ckfilesystem/joliet.hh \
						  ../include/ckfilesystem/sectormanager.hh \
						  ../include/ckfilesystem/sectorstream.hh \
						  ../include/ckfilesystem/stringtable.hh \
						  ../include/ckfilesystem/udf.hh \
						  ../include/ckfilesystem/udfwriter.hh

